fixes white spaces not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.editor{
+    white-space: pre;
+}
+
 .no-select {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
